Start learning Handling text data

--- a/ML_UP.ipynb
+++ b/ML_UP.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPf7RlbN2HeBPot91kOlTBj",
+      "authorship_tag": "ABX9TyO+wDWwUvL1LnZ9HftwM7CM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14137,12 +14137,187 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 5.4 Imputing Missing Class Values\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have a categorical feature containing missing values that you want to replace with\n",
+        "predicted values.\n",
+        "\n",
+        "Solution\n",
+        "\n",
+        "The ideal solution is to train a machine learning classifier algorithm to predict the\n",
+        "missing values, commonly a k-nearest neighbors (KNN) classifier:"
+      ],
+      "metadata": {
+        "id": "FImLbCP66LpQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load library\n",
+        "from sklearn.neighbors import KNeighborsClassifier"
+      ],
+      "metadata": {
+        "id": "WlRVX6HZ5Uo6"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create feature matrix with categorical feature\n",
+        "X = np.array([\n",
+        "              [0, 2.10, 1.45],\n",
+        "              [1, 1.18, 1.33],\n",
+        "              [0, 1.22, 1.27],\n",
+        "              [1, -0.21, -1.19]\n",
+        "              ])\n"
+      ],
+      "metadata": {
+        "id": "nNWayXuc77rv"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View x feature\n",
+        "X"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "crXAC7iF8HCq",
+        "outputId": "fcee1304-e39a-44fd-88a1-408449f6d344"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.  ,  2.1 ,  1.45],\n",
+              "       [ 1.  ,  1.18,  1.33],\n",
+              "       [ 0.  ,  1.22,  1.27],\n",
+              "       [ 1.  , -0.21, -1.19]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create feature matrix with missing values in the categorical feature\n",
+        "X_with_nan = np.array([\n",
+        "                       [np.nan, 0.87, 1.31],\n",
+        "                       [np.nan, -0.67, -0.22]])\n",
+        "\n",
+        "# View X_with_nan\n",
+        "X_with_nan"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FN16xcu78qr0",
+        "outputId": "ef9f7718-dc18-436e-9d8a-21c5396bc6aa"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  nan,  0.87,  1.31],\n",
+              "       [  nan, -0.67, -0.22]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train KNN learner\n",
+        "clf = KNeighborsClassifier(3, weights='distance')\n",
+        "clf.fit(X[:, 1:], X[:, 0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_MPr9FVv8_eR",
+        "outputId": "98024504-a69b-4cb6-b326-3e1c043fac9f"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KNeighborsClassifier(n_neighbors=3, weights='distance')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "imputed_values = clf.predict(X_with_nan[:, 1:])\n",
+        "imputed_values"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pg2Ctuk69H6w",
+        "outputId": "45d53f04-59fb-45de-fb24-b96c2275d3cb"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CHAPTER 6 Handling Text"
+      ],
+      "metadata": {
+        "id": "AkkGTyDND1Jo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "WlRVX6HZ5Uo6"
+        "id": "uwGzn7TaBTls"
       },
       "execution_count": null,
       "outputs": []
