Parsing html text learned

--- a/ML_UP_Text.ipynb
+++ b/ML_UP_Text.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ML_UP_Text",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQKCWbNQas9469pfdsmAH3",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMpNqfQ2PceNd39uKp8doCa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,16 @@
       "source": [
         "# Handling Text\n",
         "\n",
-        "## 6.1 Cleaning Text"
+        "## 6.1 Cleaning Text\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have some unstructured text data and want to complete some basic cleaning.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Most basic text cleaning operations should only replace Python’s core string opera‐\n",
+        "tions, in particular strip , replace , and split :"
       ],
       "metadata": {
         "id": "KX7Hm1rXHXCF"
@@ -40,14 +50,369 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "qX3XfhLUHNfK"
       },
       "outputs": [],
       "source": [
-        ""
+        "# Create text\n",
+        "text_data = [\n",
+        "             \"   Interrobang. By Aishwarya Henriette   \",\n",
+        "             \"Parking And Going. By Karl Gautier\",\n",
+        "             \"   Today Is The night. By Jarek Prakash   \"\n",
+        "             ]"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Strip whiitespace\n",
+        "strip_whitespace = [strip.strip() for strip in text_data]"
+      ],
+      "metadata": {
+        "id": "3xu-BR5VIm_x"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View strip_whitespace\n",
+        "strip_whitespace"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1sDS5THGI3e-",
+        "outputId": "3b4c4a68-2b43-49c7-8dc7-89f065863cef"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Interrobang. By Aishwarya Henriette',\n",
+              " 'Parking And Going. By Karl Gautier',\n",
+              " 'Today Is The night. By Jarek Prakash']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove stop\n",
+        "remove_stop = [string.replace('.', '') for string in strip_whitespace]"
+      ],
+      "metadata": {
+        "id": "HXhpNPXZI8Ey"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View remove_stop\n",
+        "remove_stop"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5hjlPoUYJvEF",
+        "outputId": "d251ff92-4fc5-48f8-dc0a-f55f692c5374"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Interrobang By Aishwarya Henriette',\n",
+              " 'Parking And Going By Karl Gautier',\n",
+              " 'Today Is The night By Jarek Prakash']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create function\n",
+        "def capitalizer(string: str):\n",
+        "  return string.upper()"
+      ],
+      "metadata": {
+        "id": "jzEZ0nmlJyKe"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Apply function\n",
+        "[capitalizer(string) for string in remove_stop]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L2lp5fFkKH9l",
+        "outputId": "b6a4fbdb-6310-4ef7-9104-2e5533196377"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['INTERROBANG BY AISHWARYA HENRIETTE',\n",
+              " 'PARKING AND GOING BY KARL GAUTIER',\n",
+              " 'TODAY IS THE NIGHT BY JAREK PRAKASH']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# USING REGULAR EXPRESSION\n",
+        "# Load libray\n",
+        "import re\n",
+        "\n",
+        "# Define the function\n",
+        "def replace_letters_with_X(string:str):\n",
+        "  return re.sub(r'[a-zA-Z]','X', string)"
+      ],
+      "metadata": {
+        "id": "nbzezICZKQ1Y"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Apply function with re pattern\n",
+        "[replace_letters_with_X(string) for string in remove_stop]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JP6tRKagLdJQ",
+        "outputId": "1c9c6882-25a9-4c41-f656-6a39ffc0e7d5"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['XXXXXXXXXXX XX XXXXXXXXX XXXXXXXXX',\n",
+              " 'XXXXXXX XXX XXXXX XX XXXX XXXXXXX',\n",
+              " 'XXXXX XX XXX XXXXX XX XXXXX XXXXXXX']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6.2 Parsing and Cleaning HTML\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have text data with HTML elements and want to extract just the text.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Use Beautiful Soup’s extensive set of options to parse and extract from HTML:"
+      ],
+      "metadata": {
+        "id": "-MHlXvQaQ-QW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install bs4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GZjRXHGHQRkL",
+        "outputId": "e80b15b1-171c-4a2c-9d05-54d0a889b61d"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: bs4 in /usr/local/lib/python3.7/dist-packages (0.0.1)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.7/dist-packages (from bs4) (4.6.3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load libray\n",
+        "from bs4 import BeautifulSoup"
+      ],
+      "metadata": {
+        "id": "noOxz4rfLotC"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create some HTML code\n",
+        "html = \"\"\"\n",
+        "<div class='full_name'><span style='font-weight:bold'>\n",
+        "Masego</span> Azra</div>\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "id": "YAdY7wnuQMVO"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# parse html\n",
+        "soup = BeautifulSoup(html, 'lxml')"
+      ],
+      "metadata": {
+        "id": "GMY2R-Z9Rq5S"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soup"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HQgM62EBR8IF",
+        "outputId": "4a073a74-1cda-485e-c651-a10861bb10d4"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<html><body><div class=\"full_name\"><span style=\"font-weight:bold\">\n",
+              "Masego</span> Azra</div>\n",
+              "</body></html>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find the class with full_name, show text\n",
+        "soup.find(\"div\", {'class':'full_name'}).text.strip()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "UQcfFsVISIwk",
+        "outputId": "65fa3688-664f-423e-fc4d-078d1c0d381d"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Masego Azra'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soup.find('span', {\"style\":'font-weight:bold'}).text.strip()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ZBxXdshUSeYa",
+        "outputId": "95e2d2ac-c3a0-44b1-acb0-4971cf650c77"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Masego'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ue_eWaYyT3JE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
