Start Learning Removing Punctuation

--- a/ML_UP_Text.ipynb
+++ b/ML_UP_Text.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP_Text",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMpNqfQ2PceNd39uKp8doCa",
+      "authorship_tag": "ABX9TyPfZjVbtYs/wArI6ReZRy1w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -406,10 +406,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import pandas as pd"
       ],
       "metadata": {
         "id": "ue_eWaYyT3JE"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6.3 Removing Punctuation"
+      ],
+      "metadata": {
+        "id": "tZs2-KR0WH56"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "itBzmKs9VTg_"
       },
       "execution_count": null,
       "outputs": []
