Tokenize text data Learned

--- a/ML_UP_Text.ipynb
+++ b/ML_UP_Text.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP_Text",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPfZjVbtYs/wArI6ReZRy1w",
+      "authorship_tag": "ABX9TyPyAhZxclduXkgpIDZ7F8rc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -417,7 +417,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6.3 Removing Punctuation"
+        "## 6.3 Removing Punctuation\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have a feature of text data and want to remove punctuation.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Define a function that uses translate with a dictionary of punctuation characters:"
       ],
       "metadata": {
         "id": "tZs2-KR0WH56"
@@ -426,10 +434,307 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Load libraries\n",
+        "import sys\n",
+        "import unicodedata"
       ],
       "metadata": {
         "id": "itBzmKs9VTg_"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create text\n",
+        "text_data = [\n",
+        "             'Hi!!!! I. Love. This. Song....',\n",
+        "             '10000% Agree!!!! #LoveIT',\n",
+        "             'Right?!?!']"
+      ],
+      "metadata": {
+        "id": "rolQTP82XUOZ"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_found = [re.findall(r'[a-zA-Z0-9]+', x) for x in text_data]\n",
+        "word_found"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pl9fbFOMZmjY",
+        "outputId": "eefb57a0-1871-4887-f182-7e99dbaa1dd9"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['Hi', 'I', 'Love', 'This', 'Song'], ['10000', 'Agree', 'LoveIT'], ['Right']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_data = [','.join(x) for x in word_found]"
+      ],
+      "metadata": {
+        "id": "gf_-7jsSaLAq"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[string.replace(',', ' ') for string in new_data]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7YmhxBG4c3sg",
+        "outputId": "72953eab-f7e0-41ec-db56-b8126de060d7"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Hi I Love This Song', '10000 Agree LoveIT', 'Right']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6.4 Tokenizing Text\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have text and want to break it up into individual words.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Natural Language Toolkit for Python (NLTK) has a powerful set of text manipulation\n",
+        "operations, including word tokenizing:"
+      ],
+      "metadata": {
+        "id": "mBAHrVXtd0HY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load library\n",
+        "from nltk.tokenize import word_tokenize"
+      ],
+      "metadata": {
+        "id": "vf5nZUysdqnm"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create text\n",
+        "string = \"The science of today is the technology of tomorrow\""
+      ],
+      "metadata": {
+        "id": "JZYCG6yfjiGg"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the library\n",
+        "import nltk"
+      ],
+      "metadata": {
+        "id": "Ie_awMSNkGuk"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dowload 'punkt\n",
+        "nltk.download('punkt')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o2inFPkjkQXE",
+        "outputId": "ec22ebe3-7f96-4a64-aa14-1df6e9247db8"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tokenize the string\n",
+        "word_tokenize(string)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c409pIqSkiVq",
+        "outputId": "beb907ff-a99b-4ff7-975b-c96ee3d782fd"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['The', 'science', 'of', 'today', 'is', 'the', 'technology', 'of', 'tomorrow']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_tokenize(\"Bonjour tout le monde, je suis chez moi à la maison. Content de vous parler\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "41QBZpp6lK3N",
+        "outputId": "40992ff5-1892-40f6-b0a6-37f6b56c863d"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Bonjour',\n",
+              " 'tout',\n",
+              " 'le',\n",
+              " 'monde',\n",
+              " ',',\n",
+              " 'je',\n",
+              " 'suis',\n",
+              " 'chez',\n",
+              " 'moi',\n",
+              " 'à',\n",
+              " 'la',\n",
+              " 'maison',\n",
+              " '.',\n",
+              " 'Content',\n",
+              " 'de',\n",
+              " 'vous',\n",
+              " 'parler']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can also tokenize in sentence"
+      ],
+      "metadata": {
+        "id": "Wcr6cPKnm2t8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.tokenize import sent_tokenize"
+      ],
+      "metadata": {
+        "id": "NI3IXtozmn0a"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tokenize in the sentence\n",
+        "sent_tokenize(string)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5s0AzIKpm-Pi",
+        "outputId": "ce3f5096-ce9f-4bd0-b7a8-c3baaa8e0683"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['The science of today is the technology of tomorrow']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "xolpgx4znDbv"
       },
       "execution_count": null,
       "outputs": []
