Start Learning Removing Stop Word

--- a/ML_UP_Text.ipynb
+++ b/ML_UP_Text.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP_Text",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPyAhZxclduXkgpIDZ7F8rc",
+      "authorship_tag": "ABX9TyNUG9B91LP0BvVOAuYdQvei",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -727,6 +727,15 @@
           "execution_count": 76
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6.5 Removing Stop Word"
+      ],
+      "metadata": {
+        "id": "CZH5KBQqoC2f"
+      }
     },
     {
       "cell_type": "code",
