--- a/ML_UP_Text.ipynb
+++ b/ML_UP_Text.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP_Text",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNUG9B91LP0BvVOAuYdQvei",
+      "authorship_tag": "ABX9TyOLTZ2jDQnZyGU7jkqxs5T2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -731,7 +731,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 6.5 Removing Stop Word"
+        "## 6.5 Removing Stop Word\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "Given tokenized text data, you want to remove extremely common words (e.g., a, is,\n",
+        "of, on) that contain little informational value.\n",
+        "\n",
+        "After tokenize we can remove stop words\n",
+        "**Solution**\n",
+        "\n",
+        "Use NLTK’s stopwords :"
       ],
       "metadata": {
         "id": "CZH5KBQqoC2f"
@@ -740,10 +750,362 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "from nltk.corpus import stopwords"
       ],
       "metadata": {
         "id": "xolpgx4znDbv"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nltk.download('stopwords')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4NUHqThppffV",
+        "outputId": "66315a0c-43dd-4911-ddbf-000e123f5ec6"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create word tokens\n",
+        "tokenized_words = ['i',\n",
+        "'am',\n",
+        "'going',\n",
+        "'to',\n",
+        "'go',\n",
+        "'to',\n",
+        "'the',\n",
+        "'store',\n",
+        "'and',\n",
+        "'park']"
+      ],
+      "metadata": {
+        "id": "NcOohUzzqKac"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenized_words"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dWxSI_b-qeNx",
+        "outputId": "167d79b7-07b2-43d3-8322-6cf133a3744a"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['i', 'am', 'going', 'to', 'go', 'to', 'the', 'store', 'and', 'park']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load stop words\n",
+        "stop_words = stopwords.words('english')"
+      ],
+      "metadata": {
+        "id": "Lh9a7QMQqf_x"
+      },
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stop_words"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XyxPTAkkqt3w",
+        "outputId": "0ea8c8b9-d3f7-4925-c39a-a6e383095d11"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['i',\n",
+              " 'me',\n",
+              " 'my',\n",
+              " 'myself',\n",
+              " 'we',\n",
+              " 'our',\n",
+              " 'ours',\n",
+              " 'ourselves',\n",
+              " 'you',\n",
+              " \"you're\",\n",
+              " \"you've\",\n",
+              " \"you'll\",\n",
+              " \"you'd\",\n",
+              " 'your',\n",
+              " 'yours',\n",
+              " 'yourself',\n",
+              " 'yourselves',\n",
+              " 'he',\n",
+              " 'him',\n",
+              " 'his',\n",
+              " 'himself',\n",
+              " 'she',\n",
+              " \"she's\",\n",
+              " 'her',\n",
+              " 'hers',\n",
+              " 'herself',\n",
+              " 'it',\n",
+              " \"it's\",\n",
+              " 'its',\n",
+              " 'itself',\n",
+              " 'they',\n",
+              " 'them',\n",
+              " 'their',\n",
+              " 'theirs',\n",
+              " 'themselves',\n",
+              " 'what',\n",
+              " 'which',\n",
+              " 'who',\n",
+              " 'whom',\n",
+              " 'this',\n",
+              " 'that',\n",
+              " \"that'll\",\n",
+              " 'these',\n",
+              " 'those',\n",
+              " 'am',\n",
+              " 'is',\n",
+              " 'are',\n",
+              " 'was',\n",
+              " 'were',\n",
+              " 'be',\n",
+              " 'been',\n",
+              " 'being',\n",
+              " 'have',\n",
+              " 'has',\n",
+              " 'had',\n",
+              " 'having',\n",
+              " 'do',\n",
+              " 'does',\n",
+              " 'did',\n",
+              " 'doing',\n",
+              " 'a',\n",
+              " 'an',\n",
+              " 'the',\n",
+              " 'and',\n",
+              " 'but',\n",
+              " 'if',\n",
+              " 'or',\n",
+              " 'because',\n",
+              " 'as',\n",
+              " 'until',\n",
+              " 'while',\n",
+              " 'of',\n",
+              " 'at',\n",
+              " 'by',\n",
+              " 'for',\n",
+              " 'with',\n",
+              " 'about',\n",
+              " 'against',\n",
+              " 'between',\n",
+              " 'into',\n",
+              " 'through',\n",
+              " 'during',\n",
+              " 'before',\n",
+              " 'after',\n",
+              " 'above',\n",
+              " 'below',\n",
+              " 'to',\n",
+              " 'from',\n",
+              " 'up',\n",
+              " 'down',\n",
+              " 'in',\n",
+              " 'out',\n",
+              " 'on',\n",
+              " 'off',\n",
+              " 'over',\n",
+              " 'under',\n",
+              " 'again',\n",
+              " 'further',\n",
+              " 'then',\n",
+              " 'once',\n",
+              " 'here',\n",
+              " 'there',\n",
+              " 'when',\n",
+              " 'where',\n",
+              " 'why',\n",
+              " 'how',\n",
+              " 'all',\n",
+              " 'any',\n",
+              " 'both',\n",
+              " 'each',\n",
+              " 'few',\n",
+              " 'more',\n",
+              " 'most',\n",
+              " 'other',\n",
+              " 'some',\n",
+              " 'such',\n",
+              " 'no',\n",
+              " 'nor',\n",
+              " 'not',\n",
+              " 'only',\n",
+              " 'own',\n",
+              " 'same',\n",
+              " 'so',\n",
+              " 'than',\n",
+              " 'too',\n",
+              " 'very',\n",
+              " 's',\n",
+              " 't',\n",
+              " 'can',\n",
+              " 'will',\n",
+              " 'just',\n",
+              " 'don',\n",
+              " \"don't\",\n",
+              " 'should',\n",
+              " \"should've\",\n",
+              " 'now',\n",
+              " 'd',\n",
+              " 'll',\n",
+              " 'm',\n",
+              " 'o',\n",
+              " 're',\n",
+              " 've',\n",
+              " 'y',\n",
+              " 'ain',\n",
+              " 'aren',\n",
+              " \"aren't\",\n",
+              " 'couldn',\n",
+              " \"couldn't\",\n",
+              " 'didn',\n",
+              " \"didn't\",\n",
+              " 'doesn',\n",
+              " \"doesn't\",\n",
+              " 'hadn',\n",
+              " \"hadn't\",\n",
+              " 'hasn',\n",
+              " \"hasn't\",\n",
+              " 'haven',\n",
+              " \"haven't\",\n",
+              " 'isn',\n",
+              " \"isn't\",\n",
+              " 'ma',\n",
+              " 'mightn',\n",
+              " \"mightn't\",\n",
+              " 'mustn',\n",
+              " \"mustn't\",\n",
+              " 'needn',\n",
+              " \"needn't\",\n",
+              " 'shan',\n",
+              " \"shan't\",\n",
+              " 'shouldn',\n",
+              " \"shouldn't\",\n",
+              " 'wasn',\n",
+              " \"wasn't\",\n",
+              " 'weren',\n",
+              " \"weren't\",\n",
+              " 'won',\n",
+              " \"won't\",\n",
+              " 'wouldn',\n",
+              " \"wouldn't\"]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove stop word\n",
+        "[word for word in tokenized_words if word not in stop_words]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9FP0Va5iq1gH",
+        "outputId": "c04b018c-6024-43ca-d132-2a593b631f19"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['going', 'go', 'store', 'park']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6.6 Stemming Words(Mots radicaux)\n",
+        "\n",
+        "**Problème**\n",
+        "\n",
+        "Vous avez des mots symbolisés et souhaitez les convertir dans leurs formes racine.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Utiliser le PorterStemer de NLTK\n"
+      ],
+      "metadata": {
+        "id": "qh5is1Pf93iy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "oOZq4KH3rR63"
       },
       "execution_count": null,
       "outputs": []
