TfidfVectorizer for See the frequecy of words in each document learned

--- a/ML_UP_Text.ipynb
+++ b/ML_UP_Text.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_UP_Text",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNthFFnDai1vyWCeAx14xMD",
+      "authorship_tag": "ABX9TyNHWFCR3HwidGdMJwPVSx4i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2044,6 +2044,39 @@
     {
       "cell_type": "code",
       "source": [
+        "count.vocabulary_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Q-60WnNigdY",
+        "outputId": "956c7ece-97fe-4f11-d9f3-15ceb1e825e1"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'beats': 0,\n",
+              " 'best': 1,\n",
+              " 'both': 2,\n",
+              " 'brazil': 3,\n",
+              " 'germany': 4,\n",
+              " 'is': 5,\n",
+              " 'love': 6,\n",
+              " 'sweden': 7}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd"
       ],
       "metadata": {
@@ -2239,10 +2272,224 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "pd.Series(count.vocabulary_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "urLWohW0inzU",
+        "outputId": "d69e7f4b-cf06-4aaf-cfde-693aa796aa33"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "love       6\n",
+              "brazil     3\n",
+              "sweden     7\n",
+              "is         5\n",
+              "best       1\n",
+              "germany    4\n",
+              "beats      0\n",
+              "both       2\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6.9 Weighting Word Importance\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You want a bag of words, but with words weighted by their importance to an observation.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "Compare the frequency of the word in a document (a tweet, movie review, speech\n",
+        "transcript, etc.) with the frequency of the word in all other documents using term\n",
+        "frequency-inverse document frequency (tf-idf). scikit-learn makes this easy with\n",
+        "TfidfVectorizer :"
+      ],
+      "metadata": {
+        "id": "Lo-jrcmDgZJQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load library\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer"
       ],
       "metadata": {
         "id": "c3f9oaT_fzgf"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create text\n",
+        "text_data = np.array([\n",
+        "                      'I love Brazil. Brazil!',\n",
+        "                      'Sweden is best',\n",
+        "                      'Germany beats both'])\n",
+        "text_data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2xoia6OzkITW",
+        "outputId": "e2337b72-4780-4d66-a980-9d15d47aa49c"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['I love Brazil. Brazil!', 'Sweden is best', 'Germany beats both'],\n",
+              "      dtype='<U22')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create the tf-idf feature matrix\n",
+        "tfidf = TfidfVectorizer()\n",
+        "feature_matrix = tfidf.fit_transform(text_data)"
+      ],
+      "metadata": {
+        "id": "MLRhQmuPlRuJ"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show tf-idf feature matrix\n",
+        "feature_matrix"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MteK14XHlr6_",
+        "outputId": "3b58d31f-1cab-4f74-fa48-5ade01b6cc95"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<3x8 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 8 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# show tf-idf feature matrix as dense matrix\n",
+        "feature_matrix.toarray()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yS49yErLl3-Y",
+        "outputId": "1583e83f-883c-43d8-8ff7-fd1e32a7c1a3"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.        , 0.        , 0.        , 0.89442719, 0.        ,\n",
+              "        0.        , 0.4472136 , 0.        ],\n",
+              "       [0.        , 0.57735027, 0.        , 0.        , 0.        ,\n",
+              "        0.57735027, 0.        , 0.57735027],\n",
+              "       [0.57735027, 0.        , 0.57735027, 0.        , 0.57735027,\n",
+              "        0.        , 0.        , 0.        ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "On compare ici la fréquence du mot dans tous les autres documents"
+      ],
+      "metadata": {
+        "id": "xP41qJjkmW4i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Show feature names\n",
+        "tfidf.vocabulary_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z8xt-VUmmDnS",
+        "outputId": "d835fbff-2a03-40aa-ed44-65c35e81dd41"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'beats': 0,\n",
+              " 'best': 1,\n",
+              " 'both': 2,\n",
+              " 'brazil': 3,\n",
+              " 'germany': 4,\n",
+              " 'is': 5,\n",
+              " 'love': 6,\n",
+              " 'sweden': 7}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ZipKEPuPm36n"
       },
       "execution_count": null,
       "outputs": []
