Starting learning Handling Times Zones

--- a/HandlingDate_and_Times.ipynb
+++ b/HandlingDate_and_Times.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HandlingDate_and_Times",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBnD/ynta7+QluuEjS2Ap/",
+      "authorship_tag": "ABX9TyN9mHJKJdHRCNkhK0pNjEPu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,6 +130,24 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7.2 Handling Time Zones\n",
+        "\n",
+        "**Problem**\n",
+        "\n",
+        "You have time series data and want to add or change time zone information.\n",
+        "\n",
+        "**Solution**\n",
+        "\n",
+        "If not specified, pandas objects have no time zone. However, we can add a time zone\n",
+        "using tz during creation:"
+      ],
+      "metadata": {
+        "id": "2GmbO-2qqa8X"
+      }
     },
     {
       "cell_type": "code",
